# textacy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  github_deploy_key_chartbeat_labs_textacy.enc  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  update-gh-pages.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md
.github/workflows/: build_and_test.yml  build_lint_and_test.yml  check.yml  checks.yml  ci.yml  docs.yml  lint_and_format.yml  publish.yml  publish_package.yml
docs/: Makefile
docs/source/: api_reference.rst  changes.md  conf.py  index.rst  installation.md  quickstart.md  tutorial-1.md  tutorial-2.md  walkthrough.md
docs/source/api_reference/: augmentation.rst  datasets.rst  datasets_resources.rst  doc_and_corpus.rst  extract.rst  information_extraction.rst  io.rst  lang_doc_corpus.rst  misc.rst  preprocessing.rst  representations.rst  resources.rst  root.rst  similarity.rst  spacier.rst  text_processing.rst  text_stats.rst  tm.rst  utils.rst  viz.rst  vsm_and_tm.rst
docs/source/getting_started/: installation.rst  quickstart.rst  usage_example.rst
docs/source/tutorials/: root.rst  tutorial-1.md  tutorial-2.md
scripts/: fetch_wiki_lang_snippets.py  prepare_langid_datasets.py  prepare_langid_datasets_v3.py  train_lang_identifier.py  train_lang_identifier_v2.py  train_lang_identifier_v3.py
src/textacy/: __init__.py  __main__.py  cache.py  constants.py  corpus.py  errors.py  export.py  extensions.py  extract.py  lang_id.py  lang_utils.py  network.py  similarity.py  text_stats.py  text_utils.py  types.py  utils.py
src/textacy/augmentation/: augmenter.py  transforms.py  utils.py
src/textacy/datasets/: base.py  capitol_words.py  imdb.py  (+6 more)
tests/: conftest.py  test_cache.py  test_capitolwords.py  test_compat.py  test_constants.py  test_corpora.py  test_corpora_bernie_and_hillary.py  test_corpora_reddit_reader.py  test_corpora_wiki_reader.py  test_corpus.py  test_data.py  test_dataset_capitol_words.py  test_dataset_dataset.py  test_dataset_oxford_text_archive.py  test_dataset_reddit_comments.py  test_dataset_supreme_court.py  test_dataset_utils.py  test_dataset_wikimedia.py  test_dataset_wikipedia.py  test_distance.py  test_doc.py  test_export.py  test_extensions.py  test_extract.py  test_fileio.py  test_io.py  test_keyterms.py  test_lang_id.py  test_lang_utils.py  test_preprocess.py  test_readme.py  test_regexes_etc.py  test_representations_vsm.py  test_similarity.py  test_spacier_components.py  test_spacier_utils.py  test_spacy_utils.py  test_supremecourt.py  test_text_stats.py  test_text_utils.py  (+3 more)
tests/augmentation/: test_augmentation_utils.py  test_augmenter.py  test_transformations.py  test_transforms.py
tests/datasets/: test_base_dataset.py  test_capitol_words.py  test_dataset.py  test_dataset_utils.py  test_imdb.py  test_oxford_text_archive.py  test_reddit_comments.py  test_supreme_court.py  test_udhr.py  test_wikimedia.py
tests/docs/: test_tutorial1.py
tests/extract/: test_acronyms.py  test_acros.py  test_bags.py  test_extensions.py  test_extract_basics.py  test_extract_extensions.py  test_extract_exts.py  test_extract_utils.py  test_kwic.py  test_matches.py  test_triples.py
tests/extract_/: test_acronyms.py  test_extract_basics.py  test_kwic.py  test_matches.py  test_svo.py  test_triples.py
tests/ke/: test_scake.py  test_sgrank.py  test_textrank.py  test_yake.py
tests/keyterms/: test_scake.py  test_sgrank.py  test_textrank.py  test_utils.py  test_yake.py
tests/preprocessing/: test_normalize.py  test_pipeline.py  test_remove.py  test_replace.py  test_resources.py
tests/representations/: test_network.py  test_sparse_vec.py  test_vectorizers.py  test_vsm.py
tests/resources/: test_concept_net.py  test_depeche_mood.py
tests/similarity/: test_edits.py  test_hybrid.py  test_tokens.py
tests/similarity_/: test_edits.py  test_hybrid.py  test_tokens.py
tests/spacier/: test_components.py  test_core.py  test_doc_extensions.py  test_extensions.py  test_spacier_utils.py
tests/text_stats/: test_api.py  test_basics.py  test_components.py  test_counts.py  test_diversity.py  test_readability.py  test_text_stats_exts.py
textacy/: __init__.py  __main__.py  about.py  cache.py  compat.py  constants.py  corpus.py  data.py  distance.py  doc.py  document.py  export.py  extract.py  fileio.py  keyterms.py  lang_utils.py  lexicon_methods.py  math_utils.py  network.py  preprocess.py  regexes_etc.py  similarity.py  spacy_pipelines.py  spacy_utils.py  text_stats.py  text_utils.py  texts.py  topic_modeling.py  transform.py  utils.py  vsm.py
textacy/augmentation/: __init__.py  augmenter.py  transformations.py  transforms.py  utils.py
textacy/corpora/: __init__.py  bernie_and_hillary.py  capitolwords.py  reddit_reader.py  supremecourt.py  wiki_reader.py  wikipcorpus.py  wikipedia.py
textacy/datasets/: __init__.py  base.py  capitol_words.py  capitolwords.py  dataset.py  imdb.py  oxford_text_archive.py  reddit_comments.py  supreme_court.py  udhr.py  utils.py  wikimedia.py  wikipedia.py
textacy/fileio/: __init__.py  csv.py  http.py  json.py  read.py  text.py  utils.py  write.py
textacy/io/: __init__.py  csv.py  http.py  json.py  matrix.py  read.py  spacy.py  text.py  utils.py  write.py
textacy/ke/: __init__.py  graph_base.py  scake.py  sgrank.py  textrank.py  utils.py  yake.py
textacy/preprocessing/: __init__.py  normalize.py  remove.py  replace.py  resources.py
textacy/representations/: __init__.py  network.py  vsm.py
textacy/resources/: __init__.py  base.py  concept_net.py  depeche_mood.py  example.txt
textacy/spacier/: __init__.py  components.py  core.py  doc_extensions.py  utils.py
textacy/tm/: __init__.py  coherence.py  topic_model.py
textacy/viz/: __init__.py  network.py  termite.py
textacy/vsm/: __init__.py  matrix_utils.py  vectorizers.py
(+121 files in other folders)
