[metadata]
name = textacy
version = attr: textacy.about.__version__
description = NLP, before and after spaCy
maintainer = Burton DeWilde
maintainer_email = burtdewilde@gmail.com
license = Apache
license_files =
    LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Natural Language :: English
    Topic :: Text Processing :: Linguistic
keywords =
    spacy
    nlp
    text processing
    linguistics
url = https://github.com/chartbeat-labs/textacy
project_urls =
    Documentation = https://textacy.readthedocs.io
    Source Code = https://github.com/chartbeat-labs/textacy
    Bug Tracker = https://github.com/chartbeat-labs/textacy/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cachetools>=2.0.1
    cytoolz>=0.8.0
    jellyfish>=0.7.0
    joblib>=0.13.0
    networkx>=2.0
    numpy>=1.17.0,<=1.19.4
    pyemd>=0.5.0
    pyphen>=0.9.4
    requests>=2.10.0
    scipy>=0.17.0
    scikit-learn>=0.19.0,<0.24.0
    spacy>=2.2.0,<3.0.0
    srsly>=0.0.5
    tqdm>=4.19.6

[options.packages.find]
where = src

[options.extras_require]
viz =
    matplotlib>=1.5.0
dev =
    black>=19.0b0,<20.8b0
    flake8>=3.8.0
    mypy>=0.600
    recommonmark>=0.6.0,<0.7.0
    sphinx>=3.0.0,<4.0.0
    pytest>=6.0.0
    pytest-cov>=2.6.0
    twine>=3.0.0
    wheel>=0.33.5

[flake8]
exclude = .git,.github,__pycache__,build,dist,docs,tests
ignore = E203,W503
# max-complexity = 20
max-line-length = 89
statistics = True
per-file-ignores =
    src/**/__init__.py:F401
