[metadata]
name = textacy
version = attr: textacy._version.__version__
description = NLP, before and after spaCy
maintainer = Burton DeWilde
maintainer_email = burtdewilde@gmail.com
license = Apache
license_files =
    LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Topic :: Text Processing :: Linguistic
keywords =
    spacy
    nlp
    text processing
    linguistics
url = https://github.com/chartbeat-labs/textacy
project_urls =
    Documentation = https://textacy.readthedocs.io
    Source Code = https://github.com/chartbeat-labs/textacy
    Bug Tracker = https://github.com/chartbeat-labs/textacy/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    cachetools>=4.0.0
    catalogue ~= 2.0
    cytoolz>=0.10.1
    jellyfish>=0.8.0
    joblib>=0.13.0
    networkx>=2.7
    numpy>=1.17.0
    pyphen>=0.10.0
    requests>=2.10.0
    scipy>=1.8.0
    scikit-learn>=1.0
    spacy ~= 3.0
    tqdm>=4.19.6

[options.packages.find]
where = src

[options.extras_require]
viz =
    matplotlib>=3.0.0
dev =
    black
    build
    flake8>=3.8.0
    mypy>=0.900
    recommonmark>=0.6.0,<0.7.0
    sphinx>=3.0.0,<4.0.0
    pytest~=6.0
    pytest-cov
    twine>=3.0.0
    wheel
build_and_test =
    build
    pytest~=6.0
    pytest-cov
    twine>=3.0.0
    wheel
docs =
    Jinja2<3.1
    recommonmark>=0.6.0,<0.7.0
    sphinx>=3.0.0,<4.0.0
lint_and_format =
    black
    flake8>=3.8.0
    mypy>=0.900

[flake8]
exclude = .git,.github,__pycache__,build,dist,docs,tests
ignore = E203,W503
# max-complexity = 20
max-line-length = 89
statistics = True
per-file-ignores =
    src/**/__init__.py:F401
